modified index..html style.css

--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
 
 <body>
     <header>
-        <nav>
-            <a href="#">Учителя</a>
-            <a href="#">Предметы</a>
-            <a href="#">О нас</a>
-            <a href="#">Отзывы</a>
-        </nav>
         <div class="container">
-            <h1>Станьте репетитором и зарабатывайте с нами</h1>
             <div class="lines">
-                <div class="pgp">
-                    <p>Этап 1</p>
-                </div>
-                <div class="pgp2">
-                    <p>Этап 2</p>
+                <div class="sett-pgp">
+                    <div class="pgp">
+                        <p>Этап 1</p>
+                    </div>
+                    <div class="pgp2">
+                        <p>Этап 2</p>
+                    </div>
                 </div>
             </div>
         </div>
