--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="cheaters">
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Александра</h3>
+                <p>русский язык/литература</p>
+            </div>
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Ирина</h3>
+                <p>история/история Беларуси</p>
+            </div>
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Георгий</h3>
+                <p>физика</p>
+            </div>
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Иван</h3>
+                <p>геометрия/алгебра</p>
+            </div>
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Ольга</h3>
+                <p>белорусский язык</p>
+            </div>
+            <div class="cheater">
+                <img src="images/russian.png" alt="">
+                <h3>Олег</h3>
+                <p>химия</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
