create images/docum.svg images/pass.svg modif index.html style.css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                     </div>
                 </div>
             </div>
+            <div class="level-und">
+                <input type="text" class="text1" placeholder="Уровень Образования">
+            </div>
+            <div class="sett-but">
+                <div class="pass">
+                    <button class="but1"> Загрузите ваш паспорт</button>
+                </div>
+                <div class="doccum">
+                    <button class="but2"> Документ об Образовании</button>
+                </div>
+            </div>
         </div>
     </header>
 
