--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,40 +10,84 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
-        <div id="cheaters">
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Александра</h3>
-                <p>русский язык/литература</p>
+        <header>
+            <h3>Учись.by</h3>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
+            </nav>
+        </header>
+        <main>
+            <h1>Наши Учителя</h1>
+            <div id="cheaters">
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Ирина</h3>
+                    <p>история/история Беларуси</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Георгий</h3>
+                    <p>физика</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Иван</h3>
+                    <p>геометрия/алгебра</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Ольга</h3>
+                    <p>белорусский язык</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Олег</h3>
+                    <p>химия</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
+                <div class="cheater">
+                    <img src="images/russian.png" alt="">
+                    <h3>Александра</h3>
+                    <p>русский язык/литература</p>
+                </div>
             </div>
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Ирина</h3>
-                <p>история/история Беларуси</p>
-            </div>
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Георгий</h3>
-                <p>физика</p>
-            </div>
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Иван</h3>
-                <p>геометрия/алгебра</p>
-            </div>
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Ольга</h3>
-                <p>белорусский язык</p>
-            </div>
-            <div class="cheater">
-                <img src="images/russian.png" alt="">
-                <h3>Олег</h3>
-                <p>химия</p>
-            </div>
-        </div>
+        </main>
     </div>
 </body>
+
 </html>
