add form and stars

--- a/cheaters.html
+++ b/cheaters.html
@@ -8,80 +8,87 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet"> 
 </head>
 
-<body>
+<body id="bodddy">
     <div class="container">
-        <header>
-            <h3>Учись.by</h3>
-            <nav>
-                <a href="#">Учителя</a>
-                <a href="#">Предметы</a>
-                <a href="#">О нас</a>
-                <a href="#">Отзывы</a>
-            </nav>
-        </header>
         <main>
             <h1>Наши Учителя</h1>
+            <form>
+                <input type="text" placeholder="Искать здесь">
+                <button type="submit">Найти</button>
+            </form>
             <div id="cheaters">
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Ирина</h3>
                     <p>история/история Беларуси</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Георгий</h3>
                     <p>физика</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Иван</h3>
                     <p>геометрия/алгебра</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Ольга</h3>
                     <p>белорусский язык</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Олег</h3>
                     <p>химия</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
                 <div class="cheater">
                     <img src="images/russian.png" alt="">
+                    <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
                 </div>
