Done header, style.css

--- a/docpass.html
+++ b/docpass.html
@@ -33,6 +33,9 @@
                     <button class="but2"> Документ об Образовании</button>
                 </div>
             </div>
+            <div class="become-rep">
+                <button class="rep">Стать репетитором</button>
+            </div>
         </div>
     </header>
 
