Create header and a part of main

--- a/index.html
+++ b/index.html
@@ -11,17 +11,34 @@
 </head>
 <body>
     <header>
-         <p>Учись.бай</p>
+        <div class="container">
+         <a class="teach">Учись.бай</a>
          <nav>
              <a href="#">Учителя</a>
              <a href="#">Предметы</a>
              <a href="#">О нас</a>
              <a href="#">Отзывов</a>
          </nav>
+        </div>
     </header>
-    <div class="container">
+    <div class="container" id="teacher">
         <h1>Учитель,который поможет с математикой </h1>
+        <a class="found">Найти репетитора</a>
+        <a class="become">Стать репетитором</a>
     </div>
+    <div class="predmetbg">
+        <h3>Предметы</h3>
+    <div class="container predmet">
+        <a href="#">Химия</a>
+        <a href="#">Биология</a>
+        <a href="#">Математика</a>
+        <a href="#">Английский язык</a>
+        <a href="#">Физика</a>
+        <a href="#">История Беларуси</a>
+        <a href="#">Всемирная история</a>
+        <a href="#">География</a>
+    </div>
+    </div> 
     
 </body>
 </html>
