finished index.html, style css

--- a/docpass.html
+++ b/docpass.html
@@ -12,12 +12,22 @@
 <body>
     <header>
         <div class="container">
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
+            <h1>Станьте репетитором и зарабатывайте сами</h1>
             <div class="lines">
                 <div class="sett-pgp">
                     <div class="pgp">
+                        <div></div>
                         <p>Этап 1</p>
                     </div>
                     <div class="pgp2">
+                        <div></div>
                         <p>Этап 2</p>
                     </div>
                 </div>
