--- a/dompask.html
+++ b/dompask.html
@@ -12,6 +12,13 @@
 <body>
     <header>
         <div class="container">
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
             <h1>Станьте репетитором и зарабатывайте сами</h1>
             <div class="seet-lol">
                 <div class="lol">
