Add new image to the folder images,modified part of main

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
         <a href="#">География</a>
     </div>
     </div> 
+    <div class="container">
+        <a href="#" class="look">Смотреть всех</a>
+        <h3 class="review">Отзывы</h3>
+        <div class="row">
+            <col-6>
+            <div>
+            <img src="images/dog.png" alt="dog">
+        </div>
+        <div>
+            <p>Анастасия</p>
+            <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+            <p>18.03.2021</p>
+        </div>
+        </col-6>
+            <col-6></col-6>
+            <col-6></col-6>
+            <col-6></col-6>
+        </div>
+    </div>
     
 </body>
 </html>
