Finish main, download some images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
-         <a class="teach">Учись.бай</a>
-         <nav>
-             <a href="#">Учителя</a>
-             <a href="#">Предметы</a>
-             <a href="#">О нас</a>
-             <a href="#">Отзывов</a>
-         </nav>
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
         </div>
     </header>
     <div class="container" id="teacher">
@@ -28,36 +30,69 @@
     </div>
     <div class="predmetbg">
         <h3>Предметы</h3>
-    <div class="container predmet">
-        <a href="#">Химия</a>
-        <a href="#">Биология</a>
-        <a href="#">Математика</a>
-        <a href="#">Английский язык</a>
-        <a href="#">Физика</a>
-        <a href="#">История Беларуси</a>
-        <a href="#">Всемирная история</a>
-        <a href="#">География</a>
+        <div class="container predmet">
+            <a href="#">Химия</a>
+            <a href="#">Биология</a>
+            <a href="#">Математика</a>
+            <a href="#">Английский язык</a>
+            <a href="#">Физика</a>
+            <a href="#">История Беларуси</a>
+            <a href="#">Всемирная история</a>
+            <a href="#">География</a>
+        </div>
     </div>
-    </div> 
     <div class="container">
         <a href="#" class="look">Смотреть всех</a>
         <h3 class="review">Отзывы</h3>
-        <div class="row">
-            <col-6>
-            <div>
-            <img src="images/dog.png" alt="dog">
-        </div>
-        <div>
-            <p>Анастасия</p>
-            <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
-            <p>18.03.2021</p>
-        </div>
-        </col-6>
-            <col-6></col-6>
-            <col-6></col-6>
-            <col-6></col-6>
+        <div class="allcomments">
+            <div class="comment">
+                <div class="dog">
+                    <img src="images/dog.png" alt="dog">
+                </div>
+                <div class="text">
+                    <p class="name">Анастасия</p>
+                    <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                    <p class="date">18.03.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="person" src="images/person.jpg" alt="person">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">17.04.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="tree" src="images/tree.webp" alt="tree">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">02.05.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="goblin" src="images/goblin.png" alt="person">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">17.04.2021</p>
+                </div>
+            </div>
         </div>
     </div>
-    
+    <div class="desk">
+        <div class="container ">
+        <p class="our">Наша компания помогает учникам понять и выучить любимые им предметы с помощью наших исполнителей, а репититорам дается возможность дополнительного заработка. </p>
+    </div>
+    </div>
+
 </body>
+
 </html>
