--- a/teachers.html
+++ b/teachers.html
@@ -27,7 +27,7 @@
                     <p>русский язык/литература</p>
                 </div>
                 <div class="teacher">
-                    <img src="images/history.ppg" alt="">
+                    <img src="images/history.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Ирина</h3>
                     <p>история/история Беларуси</p>
@@ -63,7 +63,7 @@
                     <p>геометрия/алгебра</p>
                 </div>
                 <div class="teacher">
-                    <img src="images/english.ppg" alt="">
+                    <img src="images/english.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Алена</h3>
                     <p>русский язык/литература</p>
@@ -71,7 +71,7 @@
                 <div class="teacher">
                     <img src="images/himik.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
-                    <h3>Дмитрий</h3>
+                    <h3>Анна</h3>
                     <p>химия</p>
                 </div>
                 <div class="teacher">
