--- a/dompask.html
+++ b/dompask.html
@@ -20,12 +20,12 @@
                 <a href="#">Отзывов</a>
             </nav>
             <h1>Станьте репетитором и зарабатывайте сами</h1>
-            <div class="seet-lol">
-                <div class="lol">
+            <div class="seet-pgp">
+                <div class="pgp">
                     <div></div>
                     <p>этап 1</p>
                 </div>
-                <div class="lol2">
+                <div class="pgp2">
                     <div></div>
                     <p>этап 2 </p>
                 </div>
