--- a/teachers.html
+++ b/teachers.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body id="bodddy">
@@ -91,6 +91,21 @@
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
                     <p>русский язык/литература</p>
+                </div>
+            </div>
+            <div id="links">
+                <div class="link">
+                    <a href="#">Назад</a>
+                    <a href="#">1</a>
+                    <a href="teachers1.html">2</a>
+                    <a href="#">3</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
+                    <a href="#">6</a>
+                    <a href="#">7</a>
+                    <a href="#">8</a>
+                    <a href="#">Дальше</a>
                 </div>
             </div>
         </main>
