modiv index.html,style.css

--- a/dompask.html
+++ b/dompask.html
@@ -41,7 +41,7 @@
                     <option value="">англиский</option>
                 </select>
                 <div class="put">
-                    <p>Дальше</p>
+                    <button class="ter">далее</button>
                 </div>
             </div>
         </div>
