make all adaptive

--- a/teachers.html
+++ b/teachers.html
@@ -74,19 +74,19 @@
                     <h3>Анна</h3>
                     <p>химия</p>
                 </div>
-                <div class="teacher">
+                <div class="teacher pavel">
                     <img src="images/en.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Павел</h3>
                     <p>английский</p>
                 </div>
-                <div class="teacher">
+                <div class="teacher maria">
                     <img src="images/ru.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Мария</h3>
                     <p>русский язык/литература</p>
                 </div>
-                <div class="teacher">
+                <div class="teacher aleksandr">
                     <img src="images/russian.png" alt="">
                     <img class="star" src="images/stars.png" alt="">
                     <h3>Александра</h3>
@@ -95,7 +95,7 @@
             </div>
             <div id="links">
                 <div class="link">
-                    <a href="#">Назад</a>
+                    <a class="back" href="#">Назад</a>
                     <a href="#">1</a>
                     <a href="teachers1.html">2</a>
                     <a href="#">3</a>
@@ -105,7 +105,7 @@
                     <a href="#">6</a>
                     <a href="#">7</a>
                     <a href="#">8</a>
-                    <a href="#">Дальше</a>
+                    <a class="go" href="#">Дальше</a>
                 </div>
             </div>
         </main>
