I have finished the main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="container taught">
             <a class="teach">Учись.бай</a>
             <nav>
                 <a href="#">Учителя</a>
@@ -39,6 +39,80 @@
             <a href="#">История Беларуси</a>
             <a href="#">Всемирная история</a>
             <a href="#">География</a>
+        </div>
+    </div>
+    <div id="teachers">
+        <div class="teacher">
+            <img src="images/russian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Александра</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/history.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Ирина</h3>
+            <p>история/история Беларуси</p>
+        </div>
+        <div class="teacher">
+            <img src="images/fisik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Георгий</h3>
+            <p>физика</p>
+        </div>
+        <div class="teacher">
+            <img src="images/math.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Иван</h3>
+            <p>геометрия/алгебра</p>
+        </div>
+        <div class="teacher">
+            <img src="images/belarusian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Ольга</h3>
+            <p>белорусский язык</p>
+        </div>
+        <div class="teacher">
+            <img src="images/himick.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Олег</h3>
+            <p>химия</p>
+        </div>
+        <div class="teacher">
+            <img src="images/mathik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Алексей</h3>
+            <p>геометрия/алгебра</p>
+        </div>
+        <div class="teacher">
+            <img src="images/english.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Алена</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/himik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Анна</h3>
+            <p>химия</p>
+        </div>
+        <div class="teacher">
+            <img src="images/en.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Павел</h3>
+            <p>английский</p>
+        </div>
+        <div class="teacher">
+            <img src="images/ru.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Мария</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/russian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Александра</h3>
+            <p>русский язык/литература</p>
         </div>
     </div>
     <div class="container">
@@ -92,6 +166,20 @@
         <p class="our">Наша компания помогает учникам понять и выучить любимые им предметы с помощью наших исполнителей, а репититорам дается возможность дополнительного заработка. </p>
     </div>
     </div>
+    <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <nav id="down">
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
+        </div>
+        <div class="container" id="cheater">
+            <a href="#" class="tech">Тех. поддержка</a>
+        </div>
+    </footer>
 
 </body>
 
