--- a/dompask.html
+++ b/dompask.html
@@ -46,6 +46,20 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <nav id="down">
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
+        </div>
+        <div class="container" id="cheater">
+            <a href="tex.html" class="tech">Тех. поддержка</a>
+        </div>
+    </footer>
 </body>
 
 </html>
