modif docpass.html, del docpp, modif docpss.css

--- a/docpass.html
+++ b/docpass.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="docpss.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
-        <div class="container">
+        <div class="container taught">
             <a class="teach">Учись.бай</a>
             <nav>
                 <a href="#">Учителя</a>
@@ -19,6 +22,9 @@
                 <a href="#">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
+        </div>
+        <div class="container">
+
             <h1>Станьте репетитором и зарабатывайте сами</h1>
             <div class="lines">
                 <div class="sett-pgp">
@@ -48,6 +54,20 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <nav id="down">
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывов</a>
+            </nav>
+        </div>
+        <div class="container" id="cheater">
+            <a href="#" class="tech">Тех. поддержка</a>
+        </div>
+    </footer>
 
 
 </body>
