modiv index.html,stule.css

--- a/tex.html
+++ b/tex.html
@@ -17,22 +17,22 @@
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="#">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
     </header>
     <main>
-        <h1>Если есть проблемы обращайтесь по номеру</h1>
+        <h1>Если есть проблемы,обращайтесь по номеру</h1>
         <p>+375445925963</p>
     </main>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <a href="#" class="teach">ООО “Учись.бай”</a>
             <nav id="down">
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="#">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
