add about.html about.css teachers.html teachers.css tex.css tex.html

--- a/docpass.html
+++ b/docpass.html
@@ -17,9 +17,9 @@
         <div class="container taught">
             <a class="teach">Учись.бай</a>
             <nav>
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
         </div>
@@ -65,7 +65,7 @@
             </nav>
         </div>
         <div class="container" id="cheater">
-            <a href="#" class="tech">Тех. поддержка</a>
+            <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
 
