add header footer

--- a/teachers.html
+++ b/teachers.html
@@ -97,7 +97,7 @@
                 <div class="link">
                     <a class="back" href="#">Назад</a>
                     <a href="#">1</a>
-                    <a href="teachers1.html">2</a>
+                    <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
