--- a/review.html
+++ b/review.html
@@ -10,7 +10,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <header>
+        <div class="container taught">
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
+            </nav>
+        </div>
+    </header>
     <div class="container">
         <main>
             <div id="reviews">
@@ -30,7 +42,7 @@
                     </div>
                     <div class="about">
                         <h2>Екатерина</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Очень понравилась Александра, хорошо объянила тему по русскому.</p>
                         <p class="date">25.04.2021</p>
                     </div>
                 </div>
@@ -40,7 +52,7 @@
                     </div>
                     <div class="about">
                         <h2>Егор</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Респект Ивану, помог подготовиться к контрольной работе.</p>
                         <p class="date">20.04.2021</p>
                     </div>
                 </div>
@@ -50,7 +62,8 @@
                     </div>
                     <div class="about">
                         <h2>Арсений</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Понравилась Ольга, очень помогала всю четверть.</p>
+                        </p>
                         <p class="date">14.04.2021</p>
                     </div>
                 </div>
@@ -60,7 +73,7 @@
                     </div>
                     <div class="about">
                         <h2>Глеб</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Алексей хорош, пояснил за алгебру.</p>
                         <p class="date">8.04.2021</p>
                     </div>
                 </div>
@@ -70,7 +83,7 @@
                     </div>
                     <div class="about">
                         <h2>Илья</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Большое спасибо Анне, помогла разобраться с химией.</p>
                         <p class="date">02.04.2021</p>
                     </div>
                 </div>
@@ -80,8 +93,8 @@
                     </div>
                     <div class="about">
                         <h2>Ксения</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
-                        <p class="date">28.043.2021</p>
+                        <p>Спасибо Павлу, научил более свободнее говорить на английском.</p>
+                        <p class="date">28.03.2021</p>
                     </div>
                 </div>
                 <div class="review">
@@ -90,7 +103,7 @@
                     </div>
                     <div class="about">
                         <h2>Святослав</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Ирина, помогла разобраться в истории Беларуси.</p>
                         <p class="date">20.03.2021</p>
                     </div>
                 </div>
@@ -100,13 +113,39 @@
                     </div>
                     <div class="about">
                         <h2>Валера</h2>
-                        <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                        <p>Павел помог повысить мой уровень английского языка.</p>
                         <p class="date">13.03.2021</p>
                     </div>
                 </div>
             </div>
+            <div id="link_2">
+                <div class="link">
+                    <a class="back" href="#">Назад</a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
+                    <a href="#">6</a>
+                    <a href="#">7</a>
+                    <a href="#">8</a>
+                    <a class="go" href="#">Дальше</a>
+                </div>
+            </div>
         </main>
     </div>
+    <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учись.бай”</a>
+            <nav class="down">
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 
 </html>
