modiv all thigs

--- a/dompask.html
+++ b/dompask.html
@@ -14,9 +14,9 @@
         <div class="container">
             <a class="teach">Учись.бай</a>
             <nav>
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
             <h1>Станьте репетитором и зарабатывайте сами</h1>
@@ -50,9 +50,9 @@
         <div class="container firma">
             <a href="#" class="teach">ООО “Учисьбай”</a>
             <nav id="down">
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
         </div>
