--- a/tex.html
+++ b/tex.html
@@ -27,7 +27,7 @@
     </main>
     <footer>
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учись.бай”</a>
+            <a href="#" class="teach">OOO “Учись.бай”</a>
             <nav id="down">
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
