modif all things

--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
         <div class="border-about">
             <a class="teach">Учись.бай</a>
             <nav>
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
         </div>
@@ -54,14 +54,14 @@
         <div class="container firma">
             <a href="#" class="teach">ООО “Учисьбай”</a>
             <nav id="down">
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
         </div>
         <div class="container" id="cheater">
-            <a href="#" class="tech">Тех. поддержка</a>
+            <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
 </body>
