--- a/docpass.html
+++ b/docpass.html
@@ -58,9 +58,9 @@
         <div class="container firma">
             <a href="#" class="teach">ООО “Учисьбай”</a>
             <nav id="down">
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывов</a>
             </nav>
         </div>
