--- a/index.html
+++ b/index.html
@@ -11,17 +11,179 @@
 </head>
 <body>
     <header>
-         <p>Учись.бай</p>
-         <nav>
-             <a href="#">Учителя</a>
-             <a href="#">Предметы</a>
-             <a href="#">О нас</a>
-             <a href="#">Отзывов</a>
-         </nav>
+        <div class="container taught">
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
+            </nav>
+        </div>
     </header>
-    <div class="container">
+    <div class="container" id="teacher">
         <h1>Учитель,который поможет с математикой </h1>
+        <a class="found">Найти репетитора</a>
+        <a class="become">Стать репетитором</a>
     </div>
+    <div class="predmetbg">
+        <h3>Предметы</h3>
+        <div class="container predmet">
+            <a href="#">Химия</a>
+            <a href="#">Биология</a>
+            <a href="#">Математика</a>
+            <a href="#">Английский язык</a>
+            <a href="#">Физика</a>
+            <a href="#">История Беларуси</a>
+            <a href="#">Всемирная история</a>
+            <a href="#">География</a>
+        </div>
+    </div>
+    <div id="teachers">
+        <div class="teacher">
+            <img src="images/russian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Александра</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/history.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Ирина</h3>
+            <p>история/история Беларуси</p>
+        </div>
+        <div class="teacher">
+            <img src="images/fisik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Георгий</h3>
+            <p>физика</p>
+        </div>
+        <div class="teacher">
+            <img src="images/math.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Иван</h3>
+            <p>геометрия/алгебра</p>
+        </div>
+        <div class="teacher">
+            <img src="images/belarusian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Ольга</h3>
+            <p>белорусский язык</p>
+        </div>
+        <div class="teacher">
+            <img src="images/himick.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Олег</h3>
+            <p>химия</p>
+        </div>
+        <div class="teacher">
+            <img src="images/mathik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Алексей</h3>
+            <p>геометрия/алгебра</p>
+        </div>
+        <div class="teacher">
+            <img src="images/english.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Алена</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/himik.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Анна</h3>
+            <p>химия</p>
+        </div>
+        <div class="teacher">
+            <img src="images/en.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Павел</h3>
+            <p>английский</p>
+        </div>
+        <div class="teacher">
+            <img src="images/ru.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Мария</h3>
+            <p>русский язык/литература</p>
+        </div>
+        <div class="teacher">
+            <img src="images/russian.png" alt="">
+            <img class="star" src="images/stars.png" alt="">
+            <h3>Александра</h3>
+            <p>русский язык/литература</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="pumba">
+            <a href="#" class="look">Смотреть всех</a>
+        </div>
+    </div>
+    <div class="container">
+        <h3 class="review">Отзывы</h3>
+        <div class="allcomments">
+            <div class="comment">
+                <div class="dog">
+                    <img src="images/dog.png" alt="dog">
+                </div>
+                <div class="text">
+                    <p class="name">Анастасия</p>
+                    <p>Вау! Помогли разобраться с алгеброй и всеми мелочами, которые не были понятны на уроках.</p>
+                    <p class="date">18.03.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="person" src="images/person.jpg" alt="person">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">17.04.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="tree" src="images/tree.webp" alt="tree">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">02.05.2021</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="dog">
+                    <img class="goblin" src="images/goblin.png" alt="person">
+                </div>
+                <div class="text">
+                    <p class="name">Михаил</p>
+                    <p>Огромное спасибо! Химию объяснили доходчиво в довольно интерактивной форме.Было классно!</p>
+                    <p class="date">17.04.2021</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="desk">
+        <div class="container ">
+            <p class="our">Наша компания помогает учникам понять и выучить любимые им предметы с помощью наших
+                исполнителей, а репититорам дается возможность дополнительного заработка. </p>
+        </div>
+    </div>
+    <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <nav id="down">
+                <a href="#">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
+            </nav>
+        </div>
+        <div class="container" id="cheater">
+            <a href="#" class="tech">Тех. поддержка</a>
+        </div>
+    </footer>
+
     
 </body>
 </html>
