Change otzywow on otzywy

--- a/docpass.html
+++ b/docpass.html
@@ -20,7 +20,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
         <div class="container">
@@ -61,7 +61,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывов</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
