--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container taught">
             <a class="teach">Учись.бай</a>
             <nav>
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
@@ -173,7 +173,7 @@
         <div class="container firma">
             <a href="#" class="teach">ООО “Учисьбай”</a>
             <nav id="down">
-                <a href="#">Учителя</a>
+                <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
