--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывы</a>
             </nav>
         </div>
@@ -175,7 +175,7 @@
             <nav id="down">
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывы</a>
             </nav>
         </div>
