--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </nav>
         </div>
         <div class="container" id="cheater">
-            <a href="tech.html" class="tech">Тех. поддержка</a>
+            <a href="tech.html" class="tex">Тех. поддержка</a>
         </div>
     </footer>
 
