--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </nav>
         </div>
         <div class="container" id="cheater">
-            <a href="tex.html" class="tex">Тех. поддержка</a>
+            <a href="tex.html" class="techt">Тех. поддержка</a>
         </div>
     </footer>
 
