change link reviews

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
     </header>
@@ -176,7 +176,7 @@
                 <a href="teachers.html">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="about.html">О нас</a>
-                <a href="#">Отзывы</a>
+                <a href="review.html">Отзывы</a>
             </nav>
         </div>
         <div class="container" id="cheater">
