--- a/teachers.html
+++ b/teachers.html
@@ -12,6 +12,17 @@
 </head>
 
 <body id="bodddy">
+        <header>
+        <div class="container taught">
+            <a class="teach">Учись.бай</a>
+            <nav>
+                <a href="teachers.html">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="about.html">О нас</a>
+                <a href="review.html">Отзывы</a>
+            </nav>
+        </div>
+    </header>
     <div class="container">
         <main>
             <h1>Наши Учителя</h1>
