--- a/teachers.html
+++ b/teachers.html
@@ -121,6 +121,20 @@
             </div>
         </main>
     </div>
+        <footer>
+        <div class="container firma">
+            <a href="#" class="teach">ООО “Учисьбай”</a>
+            <nav id="down">
+                <a href="teachers.html">Учителя</a>
+                <a href="#">Предметы</a>
+                <a href="about.html">О нас</a>
+                <a href="review.html">Отзывы</a>
+            </nav>
+        </div>
+        <div class="container" id="cheater">
+            <a href="tex.html" class="tech">Тех. поддержка</a>
+        </div>
+    </footer>
 </body>
 
 </html>
