--- a/teachers.html
+++ b/teachers.html
@@ -22,6 +22,9 @@
                 <a href="review.html">Отзывы</a>
             </nav>
         </div>
+            <div class="container" id="cheater">
+            <a href="tex.html" class="tech">Тех. поддержка</a>
+        </div>
     </header>
     <div class="container">
         <main>
