--- a/teachers.html
+++ b/teachers.html
@@ -12,19 +12,16 @@
 </head>
 
 <body id="bodddy">
-        <header>
+    <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">onl-home.studding.by</a>
             <nav>
-                <a href="teachers.html">Учителя</a>
+                <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="about.html">О нас</a>
-                <a href="review.html">Отзывы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
-            <div class="container" id="cheater">
-            <a href="tex.html" class="tech">Тех. поддержка</a>
-            </div>
     </header>
     <div class="container">
         <main>
@@ -111,7 +108,7 @@
                 <div class="link">
                     <a class="back" href="#">Назад</a>
                     <a href="#">1</a>
-                    <a href="teachers1.html">2</a>
+                    <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
@@ -124,17 +121,17 @@
             </div>
         </main>
     </div>
-        <footer>
+    <footer id="last-teachers">
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учисьбай”</a>
-            <nav id="down">
-                <a href="teachers.html">Учителя</a>
+            <a href="#" class="teach">ООО “onl-home.studding.by”</a>
+            <nav class="down">
+                <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="about.html">О нас</a>
-                <a href="review.html">Отзывы</a>
+                <a href="#">О нас</a>
+                <a href="#">Отзывы</a>
             </nav>
         </div>
-        <div class="container" id="cheater">
+        <div class="container" id="help">
             <a href="tex.html" class="tech">Тех. поддержка</a>
         </div>
     </footer>
