--- a/review.html
+++ b/review.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body id="comments">
     <header>
         <div class="container taught">
-            <a class="teach">Учись.бай</a>
+            <a class="teach">onl-home.studding.by</a>
             <nav>
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
@@ -135,15 +135,18 @@
             </div>
         </main>
     </div>
-    <footer>
+    <footer id="last-comments">
         <div class="container firma">
-            <a href="#" class="teach">ООО “Учись.бай”</a>
+            <a href="#" class="teach">ООО “onl-home.studding.by”</a>
             <nav class="down">
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
             </nav>
+            <div class="container" id="support">
+                <a href="tex.html" class="tech">Тех. поддержка</a>
+            </div>
         </div>
     </footer>
 </body>
