--- a/teachers.html
+++ b/teachers.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="#">Учителя</a>
                 <a href="#">Предметы</a>
-                <a href="#">О нас</a>
+                <a href="about.html">О нас</a>
                 <a href="#">Отзывы</a>
             </nav>
         </div>
