--- a/docpass.html
+++ b/docpass.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="become-rep">
-                <button class="rep">Стать репетитором</button>
+                <button class="rep" onclick="window.location.href='dompask.html';" >Стать репетитором</button>
             </div>
         </div>
     </header>
